fixed font-size of h2 an p in wrong answer notification on mobile version

--- a/styles.css
+++ b/styles.css
@@ -151,6 +151,13 @@ button {
   h1 {
     font-size: 40px;
   }
+  h2 {
+    font-size: 25px;
+    margin-top: 10px;
+  }
+  .guess-other-number {
+    font-size: 18px;
+  }
   .container {
     margin: 0 20px;
     width: 100%;
